<resources>
    <string name="app_name">MollerT</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <!-- Sign In Fragment   -->
    <string name="sign_in_title">Sign In</string>
    <string name="forgot_account">Forgot Account ?</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="edit_text_email_placeholder">user@gmail.com</string>
    <string name="edit_text_pass_placeholder">*******</string>

    <!-- Sign Up Fragment   -->
    <string name="sign_up_title">Sign Up</string>
    <string name="already_account">Already have account ?</string>
    <string name="confirm_pass_label">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="workspace">Workspace</string>

    <!-- Forgot password Fragment   -->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="send_password_to_email">Send Password To Email</string>
    <string name="boards">Boards</string>
    <string name="timeline">Timeline</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>

    <string name="member_and_jobs">Member and Jobs</string>
    <string name="add_new_card">Add New Card</string>
    <string name="delete_list_card">Delete list card</string>
    <string name="search_card">Search card</string>
    <string name="add_new_list">Add new list</string>

    <!-- Profile   -->
    <string name="bio_label">Biography</string>
    <string name="bio_placeholder">Im a bad guy</string>
    <string name="log_out">Log Out</string>

    <!-- Edit profile   -->
    <string name="name_label">Name</string>
    <string name="name_place_holder">Tran Quang Duyet</string>
    <string name="old_pass_label">Old Password</string>
    <string name="new_pass_label">New Password</string>
    <string name="calendar">Calendar</string>
    <string name="deadlines">Deadlines</string>
</resources>