<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.tnh.mollert.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/forgot_password_fragment_toolbar"
            style="@style/Theme.MollerT.CommonToolBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/forgot_password_fragment_back_button"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_BACK_CLICKED)}"
                android:src="@drawable/ic_baseline_chevron_left_24" />

            <TextView
                android:id="@+id/forgot_password_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_password_title"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>

        <ImageView
            android:id="@+id/forgot_password_fragment_app_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_15"
            android:src="@drawable/forgot_password_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_fragment_toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_fragment_email_label"
            style="@style/Theme.MollerT.CommonLabelText"
            android:layout_marginTop="@dimen/dimen_25"
            android:text="@string/email_label"
            app:layout_constraintStart_toStartOf="@id/forgot_password_fragment_email"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_fragment_app_icon" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_fragment_email"
            style="@style/Theme.MollerT.CommonEditText"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/edit_text_email_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_fragment_email_label" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_fragment_sign_in"
            style="@style/Theme.MollerT.ExpandedYellowButton"
            android:layout_marginBottom="@dimen/dimen_15"
            android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_SEND_PASSWORD_CLICKED)}"
            android:text="@string/send_password_to_email"
            app:layout_constraintBottom_toTopOf="@id/forgot_password_fragment_forgot_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_fragment_forgot_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_15"
            android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_SIGN_UP_CLICKED)}"
            android:text="@string/sign_up_title"
            android:textColor="@color/lightDarkBlue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>